--- a/controller/src/main/webapp/WEB-INF/web.xml
+++ b/controller/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-	<display-name>Archetype Created Web Application</display-name>
+	<display-name>Final TransportExpenses</display-name>
 
 
 	<!-- <context-param> <param-name> contextClass </param-name> <param-value> 
@@ -30,4 +30,13 @@
 	<!-- <listener> <listener-class> org.springframework.web.context.ContextLoaderListener 
 		</listener-class> </listener> <listener> <listener-class> org.springframework.web.context.request.RequestContextListener 
 		</listener-class> </listener> -->
+		
+		<filter> 
+   <filter-name>springSecurityFilterChain</filter-name> 
+   <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
+</filter> 
+<filter-mapping> 
+   <filter-name>springSecurityFilterChain</filter-name> 
+   <url-pattern>/*</url-pattern> 
+</filter-mapping>
 </web-app>
