--- a/controller/src/main/webapp/WEB-INF/web.xml
+++ b/controller/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,17 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
 
-<web-app>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+  https://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>Final TransportExpenses</display-name>
 
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/security.xml
+		</param-value>
+	</context-param>
 
-	<!-- <context-param> <param-name> contextClass </param-name> <param-value> 
-		org.springframework.web.context.support.AnnotationConfigWebApplicationContext 
-		</param-value> </context-param> <context-param> <param-name> contextConfigLocation 
-		</param-name> <param-value> com.senlainc.miliuta.config.ApplicationConfiguration 
-		com.senlainc.miliuta.config.ApplicationInitializer com.senlainc.miliuta.config.HibernateConfig 
-		</param-value> </context-param> -->
 	<servlet>
 
 		<servlet-name>control</servlet-name>
@@ -26,17 +26,21 @@
 		<servlet-name>control</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	<!-- <listener> <listener-class> org.springframework.web.context.ContextLoaderListener 
-		</listener-class> </listener> <listener> <listener-class> org.springframework.web.context.request.RequestContextListener 
-		</listener-class> </listener> -->
-		
-		<filter> 
-   <filter-name>springSecurityFilterChain</filter-name> 
-   <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
-</filter> 
-<filter-mapping> 
-   <filter-name>springSecurityFilterChain</filter-name> 
-   <url-pattern>/*</url-pattern> 
-</filter-mapping>
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<listener>
+		<listener-class>
+			org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+
 </web-app>
