--- a/controller/src/main/webapp/WEB-INF/web.xml
+++ b/controller/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,9 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/security.xml
+		<param-value>
+			/WEB-INF/security.xml,
+			/WEB-INF/control-servlet.xml
 		</param-value>
 	</context-param>
 
